--- a/web/src/assets/style/_typography.scss
+++ b/web/src/assets/style/_typography.scss
@@ -25,7 +25,6 @@ p {
 }
 
 h1, h2, h3, h4, h5 {
-  transition: color .6s;
   color: var(--title-color);
   margin: 2.75rem 0 1rem;
   font-weight: inherit;
